fix: jFrog issue and ark-cli issue (#683)
## Checklist

fixes pipelines 

- [ ] Follow the [contributor guide](./CONTRIBUTING.md)
- [ ] End-to-end tests pass
- [ ] Unit tests for essential parts of your code, e.g. APIs exposed via
SDKs or endpoints
- [ ] Update `./docs`
- [ ] Recognize contributors with "@all-contributors please add <person>
for <code, bug, docs, etc>"
- [ ] Linked issues #eg101

--- a/.github/actions/test-ark-cli/action.yaml
+++ b/.github/actions/test-ark-cli/action.yaml
@@ -64,6 +64,20 @@ runs:
       shell: bash
       run: ark status
 
+    - name: Build ark-controller image
+      shell: bash
+      run: |
+        set -x
+        cd ark
+
+        # Build controller Docker image with CI tag
+        docker build -t ark-controller:ci-test -f Dockerfile .
+
+        # Load image into K3s
+        docker save ark-controller:ci-test -o /tmp/ark-controller-ci.tar
+        sudo k3s ctr images import /tmp/ark-controller-ci.tar
+        rm /tmp/ark-controller-ci.tar
+
     - name: Install Ark from local charts
       shell: bash
       run: |
@@ -76,9 +90,13 @@ runs:
           --wait --timeout=5m
 
         # Install ark-controller from local chart (includes CRDs)
+        # Use the locally built controller image
         helm upgrade --install ark-controller ark/dist/chart \
           --namespace ark-system \
           --create-namespace \
+          --set controllerManager.container.image.repository=ark-controller \
+          --set controllerManager.container.image.tag=ci-test \
+          --set controllerManager.container.image.pullPolicy=Never \
           --wait --timeout=5m
 
         # Install ark-tenant from local chart
@@ -108,6 +126,17 @@ runs:
           --wait-for-ready=15m
 
         ark status
+
+    - name: Wait for Ark to be fully ready
+      shell: bash
+      run: |
+        echo "Waiting for Ark controller to be ready..."
+
+        # Simple wait for controller to be available (via ark status)
+        # This is sufficient for the validating webhook to work
+        kubectl wait --for=condition=available deployment/ark-controller -n ark-system --timeout=5m
+
+        echo "✓ Ark controller is ready"
 
     - name: Create default model
       shell: bash
