feat(ark-apiserver): add all 10 resource types and PostgreSQL backend
Phase 2 implementation of the Ark Aggregated API Server:

Resource Types:
- Add all 10 Ark resource types (Agent, Model, Query, Team, Tool, Memory,
  MCPServer, Evaluation, Evaluator, A2ATask)
- Extract common types to common_types.go
- Add OpenAPI definitions for all types
- Implement generic registry for storage operations

PostgreSQL Backend:
- Add PostgreSQL storage backend with LISTEN/NOTIFY for WATCH
- Support soft deletes with deleted_at timestamp filtering
- Connection pooling (25 max open, 5 idle)
- GIN indexes for label selector queries
- Automatic schema initialization

Helm Chart:
- Update deployment template to support PostgreSQL configuration
- Add environment variable support for database credentials

Testing:
- All 9 unit tests pass
- Verified CRUD operations with SQLite
- Verified CRUD operations with PostgreSQL
- Tested all 10 resource types via kubectl

--- a/services/ark-apiserver/chart/templates/deployment.yaml
+++ b/services/ark-apiserver/chart/templates/deployment.yaml
@@ -46,6 +46,7 @@ spec:
             - --postgres-port={{ .Values.storage.postgresql.port }}
             - --postgres-db={{ .Values.storage.postgresql.database }}
             - --postgres-user={{ .Values.storage.postgresql.username }}
+            - --postgres-password=$(POSTGRES_PASSWORD)
             {{- end }}
           ports:
             - name: https
