fix(ark-apiserver): add configurable TLS and PostgreSQL SSL settings
- Add --postgres-sslmode CLI flag for PostgreSQL SSL configuration
- Add sslMode to Helm values for PostgreSQL (default: disable for dev)
- Add apiService.caBundle support for production TLS verification
- Make insecureSkipTLSVerify configurable in APIService

--- a/services/ark-apiserver/chart/templates/apiservice.yaml
+++ b/services/ark-apiserver/chart/templates/apiservice.yaml
@@ -13,4 +13,8 @@ spec:
     port: {{ .Values.service.port }}
   groupPriorityMinimum: 1000
   versionPriority: 15
-  insecureSkipTLSVerify: true
+  {{- if .Values.apiService.caBundle }}
+  caBundle: {{ .Values.apiService.caBundle }}
+  {{- else }}
+  insecureSkipTLSVerify: {{ .Values.apiService.insecureSkipTLSVerify }}
+  {{- end }}
