--- a/tests/ark-apiserver-integration/manifests/a02-model.yaml
+++ b/tests/ark-apiserver-integration/manifests/a02-model.yaml
@@ -3,18 +3,12 @@ kind: Model
 metadata:
   name: test-model
 spec:
-  type: completions
-  provider: azure
+  type: openai
   model:
-    value: gpt-4.1-mini
+    value: gpt-4
   config:
-    azure:
+    openai:
       baseUrl:
-        value: ($azure.url)
+        value: http://mock-llm/v1
       apiKey:
-        valueFrom:
-          secretKeyRef:
-            name: test-model-token
-            key: token
-      apiVersion:
-        value: "2024-12-01-preview"
+        value: mock-api-key
