feat(ark-apiserver): add status subresource support
Add status subresource endpoints for all v1alpha1 resources to enable
controller status updates. The controller uses UpdateStatus() which
requires /status subresource endpoints.

Changes:
- Add StatusStorage implementation in pkg/registry/generic/status.go
- Register status subresources for all resources (queries/status, agents/status, etc.)
- Update test manifest to use spec.provider instead of deprecated spec.type

--- a/tests/ark-apiserver-integration/chainsaw-test.yaml
+++ b/tests/ark-apiserver-integration/chainsaw-test.yaml
@@ -149,6 +149,7 @@ spec:
     - apply:
         file: manifests/a03-agent.yaml
     - assert:
+        timeout: 120s
         resource:
           apiVersion: ark.mckinsey.com/v1alpha1
           kind: Model
@@ -176,6 +177,7 @@ spec:
     - apply:
         file: manifests/a04-query.yaml
     - assert:
+        timeout: 300s
         resource:
           apiVersion: ark.mckinsey.com/v1alpha1
           kind: Query
@@ -185,6 +187,7 @@ spec:
             (conditions[?type == 'Completed']):
             - status: 'True'
     - assert:
+        timeout: 60s
         resource:
           apiVersion: ark.mckinsey.com/v1alpha1
           kind: Query
