fix(tests): fix ark-apiserver integration test manifests
1. Add required fields that kubebuilder would default:
   - pollInterval: 1m for Model (prevents nil panic in model_controller)
   - ttl: 10m for Query (prevents nil panic in query_controller)

2. Simplify mock-llm deployment:
   - Deploy to ark-system namespace instead of test namespace
   - Use static URL: http://mock-llm.ark-system.svc.cluster.local:6556/v1
   - Remove chainsaw JMESPath templating complexity

--- a/tests/ark-apiserver-integration/chainsaw-test.yaml
+++ b/tests/ark-apiserver-integration/chainsaw-test.yaml
@@ -99,19 +99,14 @@ spec:
         content: |
           helm install mock-llm oci://ghcr.io/dwmkerr/charts/mock-llm \
             --version 0.1.27 \
-            --namespace $NAMESPACE \
+            --namespace ark-system \
             --values mock-llm-values.yaml \
             --wait --timeout=120s
-        env:
-        - name: NAMESPACE
-          value: ($namespace)
+        timeout: 150s
     cleanup:
     - script:
         content: |
-          helm uninstall mock-llm --namespace $NAMESPACE --wait --timeout=30s || true
-        env:
-        - name: NAMESPACE
-          value: ($namespace)
+          helm uninstall mock-llm --namespace ark-system --wait --timeout=30s || true
 
   - name: setup-rbac
     try:
