--- a/tests/ark-apiserver-integration/manifests/a04-query.yaml
+++ b/tests/ark-apiserver-integration/manifests/a04-query.yaml
@@ -4,6 +4,7 @@ metadata:
   name: test-query
 spec:
   input: "Hello, confirm the Ark API server integration is working correctly."
+  ttl: 10m
   target:
     type: agent
     name: test-agent
