--- a/.github/actions/deploy-additional-services/action.yml
+++ b/.github/actions/deploy-additional-services/action.yml
@@ -32,6 +32,38 @@ inputs:
     description: "Helm timeout for each release (e.g. 5m)"
     required: false
     default: "5m"
+  auth_mode:
+    description: "Authentication mode (open, sso, basic, hybrid)"
+    required: false
+    default: "open"
+  oidc_issuer_url:
+    description: "OIDC issuer URL"
+    required: false
+    default: ""
+  oidc_client_id:
+    description: "OIDC client ID"
+    required: false
+    default: ""
+  oidc_client_secret:
+    description: "OIDC client secret"
+    required: false
+    default: ""
+  oidc_provider_id:
+    description: "OIDC provider ID (used in callback URL)"
+    required: false
+    default: ""
+  oidc_provider_name:
+    description: "OIDC provider display name"
+    required: false
+    default: ""
+  dashboard_base_url:
+    description: "Dashboard base URL (e.g. https://ark.example.com)"
+    required: false
+    default: ""
+  auth_secret:
+    description: "Secret key for signing JWT tokens"
+    required: false
+    default: ""
 runs:
   using: "composite"
   steps:
@@ -74,6 +106,34 @@ runs:
             IMAGE_REPO="${NAME}"
           fi
 
+          # Build extra helm args for ark-dashboard OIDC configuration
+          EXTRA_ARGS=""
+          if [ "${NAME}" = "ark-dashboard" ]; then
+            EXTRA_ARGS="--set app.env[11].value=${{ inputs.auth_mode }}"
+            if [ -n "${{ inputs.dashboard_base_url }}" ]; then
+              EXTRA_ARGS="${EXTRA_ARGS} --set app.env[0].value=${{ inputs.dashboard_base_url }}"
+              EXTRA_ARGS="${EXTRA_ARGS} --set app.env[1].value=${{ inputs.dashboard_base_url }}/api/auth"
+            fi
+            if [ -n "${{ inputs.auth_secret }}" ]; then
+              EXTRA_ARGS="${EXTRA_ARGS} --set app.env[2].value=${{ inputs.auth_secret }}"
+            fi
+            if [ -n "${{ inputs.oidc_issuer_url }}" ]; then
+              EXTRA_ARGS="${EXTRA_ARGS} --set app.env[3].value=${{ inputs.oidc_issuer_url }}"
+            fi
+            if [ -n "${{ inputs.oidc_client_id }}" ]; then
+              EXTRA_ARGS="${EXTRA_ARGS} --set app.env[4].value=${{ inputs.oidc_client_id }}"
+            fi
+            if [ -n "${{ inputs.oidc_client_secret }}" ]; then
+              EXTRA_ARGS="${EXTRA_ARGS} --set app.env[5].value=${{ inputs.oidc_client_secret }}"
+            fi
+            if [ -n "${{ inputs.oidc_provider_name }}" ]; then
+              EXTRA_ARGS="${EXTRA_ARGS} --set app.env[6].value=${{ inputs.oidc_provider_name }}"
+            fi
+            if [ -n "${{ inputs.oidc_provider_id }}" ]; then
+              EXTRA_ARGS="${EXTRA_ARGS} --set app.env[7].value=${{ inputs.oidc_provider_id }}"
+            fi
+          fi
+
           echo "=== Deploying ${NAME} ==="
           helm upgrade --install "${NAME}" "services/${NAME}/chart" \
             --namespace "${{ inputs.namespace }}" \
@@ -81,6 +141,7 @@ runs:
             --set app.image.repository="${IMAGE_REPO}" \
             --set app.image.tag="${{ inputs.clean_version }}" \
             --set app.image.pullPolicy="${{ inputs.pull_policy }}" \
+            ${EXTRA_ARGS} \
             --wait \
             --timeout="${{ inputs.timeout }}"
         done
