--- a/.github/workflows/deploy_gcp.yml
+++ b/.github/workflows/deploy_gcp.yml
@@ -99,3 +99,11 @@ jobs:
           namespace: default
           pull_policy: IfNotPresent
           timeout: 10m
+          auth_mode: ${{ secrets.GCP_AUTH_MODE }}
+          dashboard_base_url: ${{ secrets.GCP_DASHBOARD_BASE_URL }}
+          auth_secret: ${{ secrets.GCP_AUTH_SECRET }}
+          oidc_issuer_url: ${{ secrets.GCP_OIDC_ISSUER_URL }}
+          oidc_client_id: ${{ secrets.GCP_OIDC_CLIENT_ID }}
+          oidc_client_secret: ${{ secrets.GCP_OIDC_CLIENT_SECRET }}
+          oidc_provider_id: ${{ secrets.GCP_OIDC_PROVIDER_ID }}
+          oidc_provider_name: ${{ secrets.GCP_OIDC_PROVIDER_NAME }}
