--- a/.github/workflows/sonar_scan.yaml
+++ b/.github/workflows/sonar_scan.yaml
@@ -1,9 +1,7 @@
 name: SonarQube Scan
 
 on:
-  pull_request:
-    branches: [main]
-    types: [opened, synchronize, reopened]
+  workflow_call:
   workflow_dispatch:
     inputs:
       branch:
@@ -35,7 +33,8 @@ jobs:
           organization: ${{ secrets.CF_ORGANIZATION }}
           auth_client_id: ${{ secrets.CLOUDFLARE_AUTH_CLIENT_ID }}
           auth_client_secret: ${{ secrets.CLOUDFLARE_AUTH_CLIENT_SECRET }}
-      - name: Run SonarQube Scan
+      - name: Run SonarQube Scan (Branch)
+        if: github.event_name != 'pull_request'
         run: |
           if [ -n "${{ inputs.branch }}" ]; then
             BRANCH="${{ inputs.branch }}"
@@ -53,17 +52,44 @@ jobs:
               -Dsonar.branch.name=$BRANCH \
               -Dsonar.qualitygate.wait=true
 
+      - name: Run SonarQube Scan (PR)
+        if: github.event_name == 'pull_request'
+        env:
+          PR_KEY: ${{ github.event.number }}
+          PR_BRANCH: ${{ github.head_ref }}
+          PR_BASE: ${{ github.base_ref }}
+        run: |
+          docker run -i --user $(id -u) --rm \
+            -e SONAR_TOKEN \
+            -e SONAR_HOST_URL \
+            -v $(pwd):/app \
+            -w /app \
+            sonarsource/sonar-scanner-cli:5.0.1 \
+              -Dsonar.projectKey=$PROJECT_KEY \
+              -Dsonar.sources=./ \
+              -Dsonar.pullrequest.key=$PR_KEY \
+              -Dsonar.pullrequest.branch=$PR_BRANCH \
+              -Dsonar.pullrequest.base=$PR_BASE \
+              -Dsonar.qualitygate.wait=true
+
       - name: Get SonarQube Results
         if: always()
         run: |
-          BRANCH="${{ inputs.branch || github.ref_name }}"
-
-          QG_STATUS=$(curl -s -u "${SONAR_TOKEN}:" \
-            "${SONAR_HOST_URL}/api/qualitygates/project_status?projectKey=${PROJECT_KEY}&branch=${BRANCH}" \
-            | jq -r '.projectStatus.status')
-
-          MEASURES=$(curl -s -u "${SONAR_TOKEN}:" \
-            "${SONAR_HOST_URL}/api/measures/component?component=${PROJECT_KEY}&branch=${BRANCH}&metricKeys=bugs,vulnerabilities,code_smells,coverage,duplicated_lines_density,ncloc")
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            PR_KEY="${{ github.event.number }}"
+            QG_STATUS=$(curl -s -u "${SONAR_TOKEN}:" \
+              "${SONAR_HOST_URL}/api/qualitygates/project_status?projectKey=${PROJECT_KEY}&pullRequest=${PR_KEY}" \
+              | jq -r '.projectStatus.status')
+            MEASURES=$(curl -s -u "${SONAR_TOKEN}:" \
+              "${SONAR_HOST_URL}/api/measures/component?component=${PROJECT_KEY}&pullRequest=${PR_KEY}&metricKeys=bugs,vulnerabilities,code_smells,coverage,duplicated_lines_density,ncloc")
+          else
+            BRANCH="${{ inputs.branch || github.ref_name }}"
+            QG_STATUS=$(curl -s -u "${SONAR_TOKEN}:" \
+              "${SONAR_HOST_URL}/api/qualitygates/project_status?projectKey=${PROJECT_KEY}&branch=${BRANCH}" \
+              | jq -r '.projectStatus.status')
+            MEASURES=$(curl -s -u "${SONAR_TOKEN}:" \
+              "${SONAR_HOST_URL}/api/measures/component?component=${PROJECT_KEY}&branch=${BRANCH}&metricKeys=bugs,vulnerabilities,code_smells,coverage,duplicated_lines_density,ncloc")
+          fi
 
           BUGS=$(echo "$MEASURES" | jq -r '.component.measures[] | select(.metric=="bugs") | .value // "N/A"')
           VULNERABILITIES=$(echo "$MEASURES" | jq -r '.component.measures[] | select(.metric=="vulnerabilities") | .value // "N/A"')
