--- a/services/ark-apiserver/chart/templates/apiservice.yaml
+++ b/services/ark-apiserver/chart/templates/apiservice.yaml
@@ -18,3 +18,24 @@ spec:
   {{- else }}
   insecureSkipTLSVerify: {{ .Values.apiService.insecureSkipTLSVerify }}
   {{- end }}
+---
+apiVersion: apiregistration.k8s.io/v1
+kind: APIService
+metadata:
+  name: v1prealpha1.ark.mckinsey.com
+  labels:
+    {{- include "ark-apiserver.labels" . | nindent 4 }}
+spec:
+  group: ark.mckinsey.com
+  version: v1prealpha1
+  service:
+    name: {{ include "ark-apiserver.fullname" . }}
+    namespace: {{ .Release.Namespace }}
+    port: {{ .Values.service.port }}
+  groupPriorityMinimum: 1000
+  versionPriority: 14
+  {{- if .Values.apiService.caBundle }}
+  caBundle: {{ .Values.apiService.caBundle }}
+  {{- else }}
+  insecureSkipTLSVerify: {{ .Values.apiService.insecureSkipTLSVerify }}
+  {{- end }}
