--- a/tests/query-retry-exhaustion/chainsaw-test.yaml
+++ b/tests/query-retry-exhaustion/chainsaw-test.yaml
@@ -2,6 +2,8 @@ apiVersion: chainsaw.kyverno.io/v1alpha1
 kind: Test
 metadata:
   name: query-retry-exhaustion
+  labels:
+    standard: "true"
 spec:
   description: Test query retry policy exhausts all retries and ends in error
   steps:
@@ -37,24 +39,15 @@ spec:
 
   - name: wait-for-query-completion
     try:
-    - script:
+    - wait:
+        apiVersion: ark.mckinsey.com/v1alpha1
+        kind: Query
+        name: retry-exhaustion-query
         timeout: 120s
-        content: |
-          # Wait for query to reach error phase (retries exhausted)
-          for i in {1..60}; do
-            phase=$(kubectl get query/retry-exhaustion-query -n $NAMESPACE -o jsonpath='{.status.phase}' 2>/dev/null)
-            echo "Attempt $i: phase=$phase"
-            if [ "$phase" = "error" ] || [ "$phase" = "done" ]; then
-              echo "Query completed with phase: $phase"
-              exit 0
-            fi
-            sleep 1
-          done
-          echo "Timeout waiting for query completion"
-          exit 1
-        env:
-        - name: NAMESPACE
-          value: ($namespace)
+        for:
+          condition:
+            name: Completed
+            value: 'True'
 
   - name: validate-retry-exhaustion
     try:
@@ -67,6 +60,7 @@ spec:
             name: retry-exhaustion-query
           status:
             phase: error
+            (retryCount >= `5`): true
     catch:
     - describe:
         apiVersion: ark.mckinsey.com/v1alpha1
