--- a/.github/actions/deploy-additional-services/action.yml
+++ b/.github/actions/deploy-additional-services/action.yml
@@ -108,30 +108,32 @@ runs:
 
           # Build extra helm args for ark-dashboard OIDC configuration
           EXTRA_ARGS=()
+          VALUES_FILE=""
           if [ "${NAME}" = "ark-dashboard" ]; then
-            EXTRA_ARGS+=(--set "app.env[11].name=AUTH_MODE" --set "app.env[11].value=${{ inputs.auth_mode }}")
-            if [ -n "${{ inputs.dashboard_base_url }}" ]; then
-              EXTRA_ARGS+=(--set "app.env[0].name=BASE_URL" --set "app.env[0].value=${{ inputs.dashboard_base_url }}")
-              EXTRA_ARGS+=(--set "app.env[1].name=AUTH_URL" --set "app.env[1].value=${{ inputs.dashboard_base_url }}/api/auth")
-            fi
-            if [ -n "${{ inputs.auth_secret }}" ]; then
-              EXTRA_ARGS+=(--set "app.env[2].name=AUTH_SECRET" --set "app.env[2].value=${{ inputs.auth_secret }}")
-            fi
-            if [ -n "${{ inputs.oidc_issuer_url }}" ]; then
-              EXTRA_ARGS+=(--set "app.env[3].name=OIDC_ISSUER_URL" --set "app.env[3].value=${{ inputs.oidc_issuer_url }}")
-            fi
-            if [ -n "${{ inputs.oidc_client_id }}" ]; then
-              EXTRA_ARGS+=(--set "app.env[4].name=OIDC_CLIENT_ID" --set "app.env[4].value=${{ inputs.oidc_client_id }}")
-            fi
-            if [ -n "${{ inputs.oidc_client_secret }}" ]; then
-              EXTRA_ARGS+=(--set "app.env[5].name=OIDC_CLIENT_SECRET" --set "app.env[5].value=${{ inputs.oidc_client_secret }}")
-            fi
-            if [ -n "${{ inputs.oidc_provider_name }}" ]; then
-              EXTRA_ARGS+=(--set "app.env[6].name=OIDC_PROVIDER_NAME" --set "app.env[6].value=${{ inputs.oidc_provider_name }}")
-            fi
-            if [ -n "${{ inputs.oidc_provider_id }}" ]; then
-              EXTRA_ARGS+=(--set "app.env[7].name=OIDC_PROVIDER_ID" --set "app.env[7].value=${{ inputs.oidc_provider_id }}")
-            fi
+            VALUES_FILE=$(mktemp)
+            cat > "${VALUES_FILE}" <<EOF
+        app:
+          env:
+            - name: AUTH_MODE
+              value: "${{ inputs.auth_mode }}"
+            - name: BASE_URL
+              value: "${{ inputs.dashboard_base_url }}"
+            - name: AUTH_URL
+              value: "${{ inputs.dashboard_base_url }}/api/auth"
+            - name: AUTH_SECRET
+              value: "${{ inputs.auth_secret }}"
+            - name: OIDC_ISSUER_URL
+              value: "${{ inputs.oidc_issuer_url }}"
+            - name: OIDC_CLIENT_ID
+              value: "${{ inputs.oidc_client_id }}"
+            - name: OIDC_CLIENT_SECRET
+              value: "${{ inputs.oidc_client_secret }}"
+            - name: OIDC_PROVIDER_NAME
+              value: "${{ inputs.oidc_provider_name }}"
+            - name: OIDC_PROVIDER_ID
+              value: "${{ inputs.oidc_provider_id }}"
+        EOF
+            EXTRA_ARGS+=(--values "${VALUES_FILE}")
           fi
 
           echo "=== Deploying ${NAME} ==="
@@ -144,6 +146,11 @@ runs:
             "${EXTRA_ARGS[@]}" \
             --wait \
             --timeout="${{ inputs.timeout }}"
+
+          # Cleanup temp file
+          if [ -n "${VALUES_FILE}" ] && [ -f "${VALUES_FILE}" ]; then
+            rm -f "${VALUES_FILE}"
+          fi
         done
 
     - name: Verify deployment
